--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <title>Javascript project</title>
-     <link rel="stylesheet" type="text/css" href="javascript project.css">   
+     <link rel="stylesheet" type="text/css" href="Style.css">   
     </head>
     <body>
     <div id="container">
