--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <title>Javascript project</title>
-     <link rel="stylesheet" type="text/css" href="Style.css">   
+     <link rel="stylesheet" type="text/css" href="style.css">   
     </head>
     <body>
     <div id="container">
@@ -35,6 +35,6 @@
             <small id="each"></small>
         </div>
         </div>
-        <script type="text/javascript" src="javascript project.js"></script>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
