--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-    <title>Javascript project</title>
+    <title>Simple interest calculator</title>
      <link rel="stylesheet" type="text/css" href="style.css">   
     </head>
     <body>
     <div id="container">
-        <h1>SIMPLE INTREST calculator</h1>
+        <h1>SIMPLE INTREST CALCULATOR</h1>
         <div id="calculator">
         <form>
             <p>ENTER YOUR AMOUNT</p>
