--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button type="button" id="calculate">Calculate!</button>
         </div>
         <div id="totalTip">
-        <sup>Rs.</sup><span id="tip">0.00</span>
+        <sup style="color:yellow">Rs.</sup><span id="tip" style="color:yellow">0.00</span>
             <small id="each"></small>
         </div>
         <p style="float:inherit">Created by Rajan raj.</p>
