--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <sup style="color:yellow">Rs.</sup><span id="tip" style="color:yellow">0.00</span>
             <small id="each"></small>
         </div>
-        <p style="float:inherit">Created by Rajan raj.</p>
+        <p style="float:inherit">Created by Rajan raj.  &#169</p>
         </div>
         <script type="text/javascript" src="script.js"></script>
     </body>
